--- a/_includes/post.html
+++ b/_includes/post.html
@@ -101,11 +101,11 @@
 </article>
 <div class="clearfix"></div>
 
-{% if site.disqus_shortname %}
+{% if site.disqus %}
 <div id="disqus_thread"></div>
 <!-- Add Disqus comments (not comment count) -->
 <script type="text/javascript">
-    var disqus_shortname = '{{ site.disqus_shortname }}';
+    var disqus_shortname = '{{ site.disqus }}';
     var disqus_identifier = '{{ page.url }}';
     var disqus_title = '{{ page.title }}';
     var disqus_url = '{{ site.url }}{{ page.url }}';
@@ -122,7 +122,7 @@
 <!-- Add Disqus comment count (not the comments) -->
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
-    var disqus_shortname = '{{ site.disqus_shortname }}';
+    var disqus_shortname = '{{ site.disqus }}';
     // var disqus_developer = 1; // Comment out when the site is live
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
