--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,4 @@
---- theme : name : dbyll --- {% include default.html %} {% if site.google_analytics %}
+{% include default.html %} {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
     (function(i, s, o, g, r, a, m) {
